# fundamentos_de_vibracoes

./: experimento2.ipynb  experimento3.ipynb  experimento4.ipynb  pyproject.toml
.ipynb_checkpoints/: experimento2-checkpoint.ipynb
experimento2/: Autospectrum(Chapa_mat01) - Input.txt  Autospectrum(Chapa_mat02) - Input.txt  Autospectrum(Chapa_mat03) - Input.txt  Autospectrum(Chapa_nua01) - Input.txt  Autospectrum(Chapa_nua02) - Input.txt  Autospectrum(Chapa_nua03) - Input.txt  Time(Chapa_mat01) - Input.txt  Time(Chapa_mat02) - Input.txt  Time(Chapa_mat03) - Input.txt  Time(Chapa_nua01) - Input.txt  Time(Chapa_nua02) - Input.txt  Time(Chapa_nua03) - Input.txt  freq_chapa_mat.eps  freq_chapa_nua.eps  time_chapa_mat.eps  time_chapa_nua.eps
experimento3/: Autospectrum(1GDL) - Input01.txt  Autospectrum(1GDL) - Input02.txt  Autospectrum(1GDL) - Input03.txt  Autospectrum(2GDL) - Input01.txt  Autospectrum(2GDL) - Input02.txt  Autospectrum(2GDL) - Input03.txt  Autospectrum(2GDLbarra) - Input01.txt  Autospectrum(2GDLbarra) - Input02.txt  Autospectrum(2GDLbarra) - Input03.txt  Autospectrum(2GDLbarra) - Input04.txt
experimento4/: Autospectrum(Signal 1) -2GDL Input.txt  Autospectrum(Signal 1) -3GDL Input.txt  Autospectrum(Signal 2) -2GDL Input.txt  Autospectrum(Signal 2) -3GDL Input.txt  Autospectrum(Signal 3) -2GDL Input.txt  Autospectrum(Signal 3) -3GDL Input.txt  Time(Signal 1) -2GDL Input.txt  Time(Signal 1) -3GDL Input.txt  Time(Signal 2) -2GDL Input.txt  Time(Signal 2) -3GDL Input.txt  Time(Signal 3) -2GDL Input.txt  Time(Signal 3) -3GDL Input.txt  time_2gdl.eps  (+2 more)
