[project]
name = "fundamentos-de-vibracoes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "ruff>=0.11.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
