[project]
name = "fundamentos-de-vibracoes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly[express]>=6.0.1",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "ruff>=0.11.5",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
